fix back button spacing

--- a/src/app/components/builder-tabs/builder-tabs.component.scss
+++ b/src/app/components/builder-tabs/builder-tabs.component.scss
@@ -106,7 +106,7 @@
 }
 
 .tab-content-container {
-  margin-top: 30px;
+  margin-top: 20px;
   overflow-y: hidden;
 }
 
@@ -163,6 +163,5 @@
 }
 
 .back-button {
-  margin-top: -12px;
   margin-bottom: 16px;
 }
